fix getQuestions method problems